--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,4 +1,6 @@
-try_files $url /index.php?&args;
+location / {
+    try_files $url /index.php?&args;
+}
 
 location ~ \.php$ {
     try files @heroki-fcgi @heroku-fcgi;
